<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Survey</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="comments">Comments</string>
    <string name="push_this">Push this</string>

</resources>
